feat: add endpoints and services to retrieve requests and services by user ID
